Reboot: Fix `th` alignment for Safari (#561)

--- a/scss/core/_reboot.scss
+++ b/scss/core/_reboot.scss
@@ -303,9 +303,11 @@ caption {
 }
 
 th {
-    // Matches default `<td>` alignment by inheriting from the `<body>`, or the
-    // closest parent with a set `text-align`.
+    // Matches default `<td>` alignment by inheriting `text-align`.
+    // 1. Fix alignment for Safari
     text-align: inherit;
+    // stylelint-disable-next-line declaration-block-no-duplicate-properties
+    text-align: -webkit-match-parent; // 1
 }
 
 
